front_end/src/App.css
#hero {
  display: flex;
  margin: 0;
  min-height: 85vh;
  align-items: center;
  font-size: 1.6rem;
}

#hero_img {
  margin-left: 10rem;
  max-width: 35vw;
  background-color: red;
  border: 4px solid #FBA201;
  border-radius: 10px;
}

#right {
  min-width: auto;
  margin: 0 auto;
}

#hero_text_contain {
  padding-bottom: 4rem;
}

.hero_text {
  font-size: 6.734rem;
  line-height: 1;
}

#form {
  padding-top: 7.1rem;
  padding-bottom: 7.1rem;
  padding-left: 6.4rem;
  padding-right: 6.4rem;
  background-color: white;
  border-radius: 1rem;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

form {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.error {
  color: red;
}

.bold{
  font-weight: 700;
}

#email {
  all: unset;
  border: 2px solid #53FF45;
  padding: 1.7rem;
  border-radius: 1rem; 
}

.button_contain {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
}

.desc {
  max-width: 30vw;
  font-size: 1.2rem;
  padding-top: 2rem;
  color: black;
  opacity: 80%
}

.vendor {
  color: #FBA201;
}

#copy_contain {
  display: flex;
  justify-content: center;
}

@media (max-width: 60rem) {
  body{
    font-size: 1rem;
  }
  #hero_img {
    display: none;
  }
  #hero {
    padding: 2rem;
    font-size: 1.2rem;
    flex-direction: column;
    justify-content: center;
  }
  #right {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .hero_text {
    font-size: 4.4rem;
  }
  .desc {
    max-width: 100vw;
    margin: auto;
  }
  #copy {
    max-width: 100vw;
  }
  #form {
    padding-top: 4rem;
    padding-bottom: 4rem;
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

